theLanguageEmporium/force-app/main/default/objects/Contact/fields/Assigned_Tutor__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Tutor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Tutor</label>
    <referenceTo>Tutor__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>