theLanguageEmporium/force-app/main/default/objects/Contact/fields/Current_Lesson__c.field-meta.xml
<CustomField>
    <fullName>Current_Lesson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Lesson</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This must be a lesson!</errorMessage>
        <filterItems>
            <field>Lesson__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Lesson</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Lesson__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>