theLanguageEmporium/force-app/main/default/objects/Contact/fields/Last_Completed_Course__c.field-meta.xml
<CustomField>
    <fullName>Last_Completed_Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Completed Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Contacts (Last Completed Course)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>