theLanguageEmporium/force-app/main/default/objects/Contact/fields/Last_Quiz__c.field-meta.xml
<CustomField>
    <fullName>Last_Quiz__c</fullName>
    <label>Last Quiz</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>