theLanguageEmporium/force-app/main/default/objects/Contact/fields/Last_Quiz_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Quiz_Date__c</fullName>
    <label>Last Quiz Date</label>
    <type>DateTime</type>
</CustomField>