theLanguageEmporium/force-app/main/default/objects/Contact/fields/Learner_Rank__c.field-meta.xml
<CustomField>
    <fullName>Learner_Rank__c</fullName>
    <defaultValue>&quot;Paper&quot;</defaultValue>
    <label>Learner Rank</label>
    <length>45</length>
    <type>Text</type>
</CustomField>